--- a/app/src/main/res/layout/button_odd_detail.xml
+++ b/app/src/main/res/layout/button_odd_detail.xml
@@ -34,7 +34,7 @@
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/din_font"
+                    android:fontFamily="@font/din_regular"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:textColor="@color/selector_button_odd_top_text"
@@ -47,7 +47,7 @@
                     android:id="@+id/tv_spread"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/din_font"
+                    android:fontFamily="@font/din_regular"
                     android:maxLines="1"
                     android:textColor="@color/selector_button_odd_top_text"
                     android:textSize="@dimen/textSize14sp"
