--- a/app/src/main/res/layout/item_sport_favorite.xml
+++ b/app/src/main/res/layout/item_sport_favorite.xml
@@ -94,7 +94,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="@dimen/margin_5"
-                        android:fontFamily="@font/din_font"
+                        android:fontFamily="@font/din_regular"
                         android:textColor="@color/color_6C7BA8"
                         android:textFontWeight="700"
                         android:textSize="@dimen/textSize10sp"
@@ -119,7 +119,7 @@
                         android:layout_height="wrap_content"
                         android:drawableLeft="@drawable/ic_kicks"
                         android:paddingEnd="5dp"
-                        android:fontFamily="@font/din_font"
+                        android:fontFamily="@font/din_regular"
                         android:textColor="@color/color_6C7BA8"
                         android:textSize="@dimen/textSize10sp"
                         android:visibility="gone"
@@ -270,7 +270,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_4"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:includeFontPadding="false"
                                 android:textColor="@color/color_FFFFFF_414655"
                                 android:textSize="@dimen/textSize12sp"
@@ -283,7 +283,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_10"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:includeFontPadding="false"
                                 android:textColor="@color/color_FFFFFF_414655"
                                 android:textSize="@dimen/textSize12sp"
@@ -296,7 +296,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_10"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:includeFontPadding="false"
                                 android:textColor="@color/color_FFFFFF_414655"
                                 android:textSize="@dimen/textSize12sp"
@@ -412,7 +412,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_4"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:includeFontPadding="false"
                                 android:textColor="@color/color_FFFFFF_414655"
                                 android:textSize="@dimen/textSize12sp"
@@ -425,7 +425,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_10"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:includeFontPadding="false"
                                 android:textColor="@color/color_FFFFFF_414655"
                                 android:textSize="@dimen/textSize12sp"
@@ -438,7 +438,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_10"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:includeFontPadding="false"
                                 android:textColor="@color/color_FFFFFF_414655"
                                 android:textSize="@dimen/textSize12sp"
@@ -482,7 +482,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="5dp"
-                            android:fontFamily="@font/din_font"
+                            android:fontFamily="@font/din_regular"
                             android:gravity="center"
                             android:textColor="@color/color_6C7BA8"
                             android:textSize="@dimen/textSize12sp"
@@ -586,7 +586,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/color_535D76"
-                    android:fontFamily="@font/din_font"
+                    android:fontFamily="@font/din_regular"
                     android:textSize="12sp"
                     android:visibility="gone"
                     tools:text="1-1 2-2 3-3"
