--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -67,7 +67,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="@dimen/margin_5"
-                            android:fontFamily="@font/din_font"
+                            android:fontFamily="@font/din_regular"
                             android:textColor="@color/color_6C7BA8"
                             android:textFontWeight="700"
                             android:textSize="@dimen/textSize10sp"
@@ -93,7 +93,7 @@
                             android:drawableLeft="@drawable/ic_kicks"
                             android:paddingEnd="5dp"
                             android:textColor="@color/color_6C7BA8"
-                            android:fontFamily="@font/din_font"
+                            android:fontFamily="@font/din_regular"
                             android:textSize="@dimen/textSize10sp"
                             android:visibility="gone"
                             tools:text="1-5"
@@ -248,7 +248,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_4"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:includeFontPadding="false"
                                 android:textColor="@color/color_FFFFFF_414655"
                                 android:textSize="@dimen/textSize12sp"
@@ -261,7 +261,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_10"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:includeFontPadding="false"
                                 android:textColor="@color/color_FFFFFF_414655"
                                 android:textSize="@dimen/textSize12sp"
@@ -274,7 +274,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_10"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:includeFontPadding="false"
                                 android:textColor="@color/color_FFFFFF_414655"
                                 android:textSize="@dimen/textSize12sp"
@@ -390,7 +390,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_4"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:includeFontPadding="false"
                                 android:textColor="@color/color_FFFFFF_414655"
                                 android:textSize="@dimen/textSize12sp"
@@ -403,7 +403,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_10"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:includeFontPadding="false"
                                 android:textColor="@color/color_FFFFFF_414655"
                                 android:textSize="@dimen/textSize12sp"
@@ -416,7 +416,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/margin_10"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:includeFontPadding="false"
                                 android:textColor="@color/color_FFFFFF_414655"
                                 android:textSize="@dimen/textSize12sp"
@@ -460,7 +460,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="5dp"
-                            android:fontFamily="@font/din_font"
+                            android:fontFamily="@font/din_regular"
                             android:gravity="center"
                             android:textColor="@color/color_6C7BA8"
                             android:textSize="@dimen/textSize12sp"
@@ -574,7 +574,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/color_535D76"
                     android:textSize="12sp"
-                    android:fontFamily="@font/din_font"
+                    android:fontFamily="@font/din_regular"
                     android:visibility="gone"
                     tools:text="1-1 2-2 3-3"
                     tools:visibility="visible" />
