--- a/app/src/main/res/layout/itemview_sport_type_v6.xml
+++ b/app/src/main/res/layout/itemview_sport_type_v6.xml
@@ -42,7 +42,7 @@
         android:maxLines="1"
         android:textColor="@color/color_select_blue_black"
         android:textSize="@dimen/textSize12sp"
-        android:fontFamily="@font/din_font"
+        android:fontFamily="@font/din_regular"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sport_type_text"
