--- a/app/src/main/res/layout/activity_profile_center.xml
+++ b/app/src/main/res/layout/activity_profile_center.xml
@@ -148,7 +148,7 @@
                                 android:id="@+id/tv_currency_type"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:textColor="@color/color_643C00"
                                 android:textSize="@dimen/textSize20sp"
                                 android:textStyle="bold"
