--- a/app/src/main/res/layout/bet_bar_layout.xml
+++ b/app/src/main/res/layout/bet_bar_layout.xml
@@ -73,7 +73,7 @@
         android:textColor="@color/color_FFFFFF_414655"
         android:textSize="@dimen/textSize16sp"
         android:textFontWeight="700"
-        android:fontFamily="@font/din_font"
+        android:fontFamily="@font/din_regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tv_balance"
         app:layout_constraintTop_toTopOf="parent"
@@ -87,7 +87,7 @@
         android:textColor="@color/color_FFFFFF_414655"
         android:textSize="@dimen/textSize18sp"
         android:textFontWeight="700"
-        android:fontFamily="@font/din_font"
+        android:fontFamily="@font/din_regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iv_arrow"
         app:layout_constraintTop_toTopOf="parent"
