--- a/app/src/main/res/layout/content_odds_detail_list_item.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_item.xml
@@ -30,7 +30,7 @@
             android:textColor="@color/color_414655"
             android:textSize="@dimen/textSize14sp"
             android:textAllCaps="true"
-            android:fontFamily="@font/din_font"
+            android:fontFamily="@font/din_regular"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/viewLeftLine"
             app:layout_constraintRight_toLeftOf="@+id/odd_detail_pin"
