--- a/app/src/main/res/layout/item_account_history.xml
+++ b/app/src/main/res/layout/item_account_history.xml
@@ -47,7 +47,7 @@
                 android:textSize="@dimen/textSize14sp"
                 android:text="@{row.statDate}"
                 app:dateNoYear="@{row.statDate}"
-                android:fontFamily="@font/din_font"
+                android:fontFamily="@font/din_regular"
                 app:autoSizeMaxTextSize="@dimen/textSize12sp"
                 app:autoSizeMinTextSize="@dimen/textSize8sp"
                 android:visibility="gone"
@@ -61,7 +61,7 @@
                 app:dayOfWeek="@{row.statDate}"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="@dimen/textSize14sp"
-                android:fontFamily="@font/din_font"
+                android:fontFamily="@font/din_regular"
                 android:visibility="gone"
                 tools:text="星期一" />
 
@@ -72,7 +72,7 @@
                 android:gravity="center"
                 android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize14sp"
-                android:fontFamily="@font/din_font"
+                android:fontFamily="@font/din_regular"
                 app:autoSizeMaxTextSize="@dimen/textSize12sp"
                 app:autoSizeMinTextSize="@dimen/textSize8sp"
                 tools:text="2022/08/13" />
@@ -86,7 +86,7 @@
             tools:text="8,117,500.000"
             android:gravity="center"
             android:text="@string/unknown_data"
-            android:fontFamily="@font/din_font"
+            android:fontFamily="@font/din_regular"
             app:moneyFormat="@{row.settledBetMoney}"
             android:layout_marginStart="7dp"
             android:textColor="@color/color_9BB3D9_535D76"
@@ -99,7 +99,7 @@
             android:layout_marginStart="7dp"
             android:layout_weight="2"
             android:gravity="center"
-            android:fontFamily="@font/din_font"
+            android:fontFamily="@font/din_regular"
             tools:text="9,959,500.000"
             android:text="@string/unknown_data"
             app:moneyFormat="@{row.validBetMoney}"
@@ -113,7 +113,7 @@
             android:layout_marginStart="7dp"
             android:layout_weight="2"
             android:gravity="center"
-            android:fontFamily="@font/din_font"
+            android:fontFamily="@font/din_regular"
             android:text="@string/unknown_data"
             app:moneyColor="@{row.vipRewardMoneyWithRebate}"
             app:moneyFormat="@{row.vipRewardMoneyWithRebate}"
