--- a/app/src/main/res/layout/item_bet_station.xml
+++ b/app/src/main/res/layout/item_bet_station.xml
@@ -18,7 +18,7 @@
         android:layout_marginStart="@dimen/margin_10"
         android:layout_marginLeft="@dimen/margin_10"
         android:textStyle="bold"
-        android:fontFamily="@font/din_font"
+        android:fontFamily="@font/din_regular"
         android:textColor="@color/selector_text_color_money_bank"
         android:textSize="@dimen/textSize12sp"
         tools:text="BetStation" />
@@ -29,7 +29,7 @@
         android:layout_marginStart="@dimen/margin_10"
         android:layout_marginLeft="@dimen/margin_10"
         android:textStyle="bold"
-        android:fontFamily="@font/din_font"
+        android:fontFamily="@font/din_regular"
         android:textColor="@color/selector_text_color_money_bank"
         android:textSize="@dimen/textSize12sp"
         tools:text="BetStation" />
