--- a/app/src/main/res/layout/item_match_result_match_new.xml
+++ b/app/src/main/res/layout/item_match_result_match_new.xml
@@ -37,7 +37,7 @@
                 android:text="VS"
                 android:textColor="@color/color_A7B2C4"
                 android:textSize="@dimen/textSize16sp"
-                android:fontFamily="@font/din_font"
+                android:fontFamily="@font/din_regular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -118,7 +118,7 @@
                 android:gravity="center"
                 android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize14sp"
-                android:fontFamily="@font/din_font"
+                android:fontFamily="@font/din_regular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tv_full_game_score"
                 app:layout_constraintStart_toStartOf="parent"
@@ -134,7 +134,7 @@
                 android:gravity="center"
                 android:textColor="@color/color_FFFFFF_535D76"
                 android:textSize="@dimen/textSize14sp"
-                android:fontFamily="@font/din_font"
+                android:fontFamily="@font/din_regular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/tv_full_game_score"
                 app:layout_constraintStart_toEndOf="@id/tv_first_half_score"
@@ -151,7 +151,7 @@
                 android:gravity="center"
                 android:textColor="@color/color_FFFFFF_535D76"
                 android:textSize="@dimen/textSize14sp"
-                android:fontFamily="@font/din_font"
+                android:fontFamily="@font/din_regular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -166,7 +166,7 @@
                 android:gravity="center"
                 android:textColor="@color/color_FFFFFF_535D76"
                 android:textSize="@dimen/textSize14sp"
-                android:fontFamily="@font/din_font"
+                android:fontFamily="@font/din_regular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_full_game_score"
