--- a/app/src/main/res/layout/item_outright_catagory.xml
+++ b/app/src/main/res/layout/item_outright_catagory.xml
@@ -43,7 +43,7 @@
             android:singleLine="true"
             android:textColor="@color/color_6C7BA8"
             android:textSize="@dimen/textSize12sp"
-            android:fontFamily="@font/din_font"
+            android:fontFamily="@font/din_regular"
             tools:text="2022-11-05 20:00" />
 
     </LinearLayout>
