--- a/app/src/main/res/layout/view_detail_head_toolbar.xml
+++ b/app/src/main/res/layout/view_detail_head_toolbar.xml
@@ -161,7 +161,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:text="@string/time_null"
-                        android:fontFamily="@font/din_font"
+                        android:fontFamily="@font/din_regular"
                         android:textColor="@color/color_FFFFFF"
                         android:textSize="@dimen/textSize12sp" />
 
@@ -193,7 +193,7 @@
                         android:singleLine="true"
                         android:textColor="@color/color_FFFFFF"
                         android:textSize="@dimen/textSize26sp"
-                        android:fontFamily="@font/din_font"
+                        android:fontFamily="@font/din_regular"
                         android:textStyle="bold"
                         android:visibility="gone"
                         tools:text="5 - 5"
@@ -393,7 +393,7 @@
                     android:textSize="@dimen/textSize8sp"
                     android:textColor="@color/color_FFFFFF"
                     android:gravity="center"
-                    android:fontFamily="@font/din_font"
+                    android:fontFamily="@font/din_regular"
                     android:visibility="gone"
                     tools:text="1-3"
                     tools:visibility="visible" />
@@ -442,7 +442,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/color_FFFFFF"
                     android:textSize="@dimen/textSize10sp"
-                    android:fontFamily="@font/din_font"
+                    android:fontFamily="@font/din_regular"
                     android:visibility="gone"
                     android:gravity="center"
                     tools:text="半：2-1"
@@ -462,7 +462,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="9-2"
-                    android:fontFamily="@font/din_font"
+                    android:fontFamily="@font/din_regular"
                     android:textSize="@dimen/textSize10sp"
                     android:textColor="@color/color_FFFFFF"
                     android:layout_marginLeft="11dp"
@@ -480,7 +480,7 @@
                     android:textSize="@dimen/textSize8sp"
                     android:textColor="@color/color_FFFFFF"
                     android:gravity="center"
-                    android:fontFamily="@font/din_font"
+                    android:fontFamily="@font/din_regular"
                     android:visibility="gone"
                     tools:visibility="visible" />
 
@@ -490,7 +490,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="3-1"
-                    android:fontFamily="@font/din_font"
+                    android:fontFamily="@font/din_regular"
                     android:textSize="@dimen/textSize10sp"
                     android:textColor="@color/color_FFFFFF"
                     android:layout_marginLeft="6dp"
