--- a/app/src/main/res/layout/view_toolbar_detail_collaps.xml
+++ b/app/src/main/res/layout/view_toolbar_detail_collaps.xml
@@ -67,7 +67,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/color_FFFFFF"
                         android:textSize="@dimen/textSize20sp"
-                        android:fontFamily="@font/din_font"
+                        android:fontFamily="@font/din_regular"
                         android:visibility="gone"
                         tools:text="5"
                         tools:visibility="visible" />
@@ -94,7 +94,7 @@
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:text="@string/time_null"
-                        android:fontFamily="@font/din_font"
+                        android:fontFamily="@font/din_regular"
                         android:textColor="@color/color_99FFFFFF"
                         android:textSize="@dimen/textSize12sp" />
 
@@ -112,7 +112,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/color_FFFFFF"
                         android:textSize="@dimen/textSize20sp"
-                        android:fontFamily="@font/din_font"
+                        android:fontFamily="@font/din_regular"
                         android:visibility="gone"
                         tools:text="5"
                         tools:visibility="visible" />
