登录页面优化

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,8 +57,8 @@
         android:layout_marginTop="@dimen/margin_10"
         android:text="@string/login_welcome"
         android:textColor="@color/color_414655"
+        android:textFontWeight="500"
         android:textSize="@dimen/textSize20sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivLogo" />
@@ -79,13 +79,13 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="24dp">
+            android:paddingVertical="15dp"
+            android:paddingHorizontal="24dp">
 
             <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
                 android:id="@+id/et_account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 app:hintText="@string/account_hint"
                 app:iconSignifier="@drawable/ic_login"
                 app:isResponsiveIconColor="false"
@@ -208,12 +208,12 @@
                 android:id="@+id/cb_remember_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="8dp"
                 android:button="@drawable/effect_login_select_checkbox"
                 android:paddingStart="6dp"
                 android:text="@string/remember_password"
-                android:textColor="@color/color_535D76"
-                android:textSize="@dimen/textSize13sp"
+                android:textColor="@color/color_9BB3D9_535D76"
+                android:textSize="@dimen/textSize14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/block_valid_code" />
 
@@ -221,14 +221,13 @@
                 android:id="@+id/btn_forget_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="8dp"
                 android:background="@null"
                 android:clickable="true"
                 android:focusable="true"
-                android:padding="4dp"
                 android:text="@string/forget_password_question"
                 android:textColor="@color/color_9BB3D9_535D76"
-                android:textSize="@dimen/textSize13sp"
+                android:textSize="@dimen/textSize14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/block_valid_code" />
 
