--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -156,9 +156,10 @@
                         android:layout_height="26dp"
                         android:minWidth="80dp"
                         android:layout_marginLeft="@dimen/margin_10"
-                        android:elevation="1dp"
+                        android:elevation="2dp"
                         android:shadowRadius="10"
                         android:shadowColor="@color/color_0500181E"
+                        android:shadowDy="5"
                         android:layout_marginBottom="5dp"
                         android:gravity="center"
                         android:button="@null"
