--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -316,6 +316,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/recharge"
+                        android:textFontWeight="500"
                         android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize16sp" />
 
@@ -323,6 +324,7 @@
                         android:id="@+id/tv_deposit_subtitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:letterSpacing="0.1"
                         android:text="@string/deposits"
                         android:fontFamily="@font/din_regular"
                         android:textColor="@color/color_A7B2C4"
@@ -362,6 +364,7 @@
                         android:id="@+id/tv_withdraw_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textFontWeight="500"
                         android:text="@string/withdraw"
                         android:textColor="@color/color_535D76"
                         android:textSize="@dimen/textSize16sp" />
@@ -371,6 +374,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/withdraw_down"
+                        android:letterSpacing="0.1"
                         android:fontFamily="@font/din_regular"
                         android:textColor="@color/color_A7B2C4"
                         android:textSize="@dimen/textSize10sp" />
