--- a/app/src/main/res/layout/fragment_bet_record.xml
+++ b/app/src/main/res/layout/fragment_bet_record.xml
@@ -96,22 +96,23 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/cl_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="2dp"
-        android:paddingHorizontal="12dp"
+        android:orientation="vertical"
         android:layout_weight="1"
-        android:background="@drawable/bg_bet_record_tab_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolBarContainer">
 
         <LinearLayout
             android:id="@+id/bet_tab"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="4dp"
+            android:layout_height="58dp"
+            android:paddingBottom="15dp"
+            android:layout_marginHorizontal="14dp"
+            android:elevation="3dp"
+            android:background="@drawable/bg_bet_record_tab_1"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -138,48 +139,63 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/cl_bet_sheet"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="14dp"
+            android:layout_marginBottom="@dimen/margin_14"
+            android:layout_marginTop="-10dp"
+            android:paddingTop="20dp"
+            app:cardElevation="3dp"
+            app:cardCornerRadius="10dp"
+            app:cardBackgroundColor="@color/color_bbbbbb_ffffff"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bet_tab"
-            tools:context="org.cxct.sportlottery.ui.main.accountHistory.next.AccountHistoryNextFragment"
-            tools:ignore="SpUsage">
+            app:layout_constraintBottom_toBottomOf="parent">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center">
-            <View
-                android:layout_width="30dp"
-                android:layout_height="0.5dp"
-                android:background="@color/color_6C7BA8_A7B2C4"
-                app:layout_constraintBottom_toBottomOf="@+id/tvUsTime"
-                app:layout_constraintStart_toEndOf="@+id/tvUsTime"
-                app:layout_constraintTop_toTopOf="@+id/tvUsTime" />
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tvUsTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
-                android:layout_marginHorizontal="4dp"
-                android:drawablePadding="@dimen/margin_6"
-                android:text="@string/text_us_east_time_bet_record"
-                android:textColor="@color/color_6C7BA8_A7B2C4"
-                android:textSize="@dimen/textSize12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                <LinearLayout
+                    android:id="@+id/cl_bet_sheet"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:orientation="vertical"
+                    tools:context="org.cxct.sportlottery.ui.main.accountHistory.next.AccountHistoryNextFragment"
+                    tools:ignore="SpUsage">
 
-            <View
-                android:layout_width="30dp"
-                android:layout_height="0.5dp"
-                android:background="@color/color_6C7BA8_A7B2C4"
-                app:layout_constraintBottom_toBottomOf="@+id/tvUsTime"
-                app:layout_constraintEnd_toStartOf="@+id/tvUsTime"
-                app:layout_constraintTop_toTopOf="@+id/tvUsTime" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="15dp">
+
+                        <View
+                            android:layout_width="30dp"
+                            android:layout_height="0.5dp"
+                            android:background="@color/color_6C7BA8_A7B2C4" />
+
+                        <TextView
+                            android:id="@+id/tvUsTime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="4dp"
+                            android:drawablePadding="@dimen/margin_6"
+                            android:text="@string/text_us_east_time_bet_record"
+                            android:textColor="@color/color_6C7BA8_A7B2C4"
+                            android:textSize="@dimen/textSize12sp" />
+
+                        <View
+                            android:layout_width="30dp"
+                            android:layout_height="0.5dp"
+                            android:background="@color/color_6C7BA8_A7B2C4" />
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
@@ -290,7 +306,7 @@
                 tools:listitem="@layout/content_match_record" />
 
         </com.scwang.smart.refresh.layout.SmartRefreshLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
