修改注册多语言

--- a/app/src/main/res/layout/activity_register_ok.xml
+++ b/app/src/main/res/layout/activity_register_ok.xml
@@ -393,7 +393,7 @@
                         app:endIcon="@drawable/ic_arrow_gray"
                         app:hintText="@string/hint_select_document_type"
                         app:isResponsiveIconColor="false"
-                        app:labelText="@string/identity_type"
+                        app:labelText="@string/kyc_type"
                         app:labelTextStyle="normal"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/etSalary"
@@ -430,7 +430,7 @@
                         android:layout_marginTop="4dp"
                         app:hintText="@string/hint_select_document_number"
                         app:isResponsiveIconColor="false"
-                        app:labelText="@string/kyc_type"
+                        app:labelText="@string/identity_number"
                         app:labelTextStyle="normal"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/etIdentityType"
@@ -1016,7 +1016,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:layout_marginTop="4dp"
-                            app:hintText="@string/hint_security_code"
+                            app:hintText="@string/hint_verification_code"
                             app:isResponsiveIconColor="false"
                             app:labelText="@string/verification_code"
                             app:labelTextStyle="normal"
