忘记密码，密码UI及逻辑处理

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -91,7 +91,7 @@
                     android:layout_marginTop="4dp"
                     app:hintText="@string/hint_phone_number"
                     app:isResponsiveIconColor="false"
-                    app:iconSignifier="@drawable/ic_login"
+                    app:iconSignifier="@drawable/icon_device_mobile"
                     app:labelText="@string/phone_number"
                     app:labelTextStyle="normal"
                     app:hideSubView ="true"
@@ -101,7 +101,7 @@
                     app:subLabelText="+63">
 
                     <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
-                        android:id="@+id/eet_phone"
+                        android:id="@+id/eet_phone_num"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="actionNext"
@@ -146,7 +146,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:imeOptions="actionNext"
-                            android:inputType="text"
+                            android:inputType="number"
                             android:maxLines="1"
                             android:textColor="@color/color_FFFFFF_DE000000"
                             android:textSize="@dimen/textSize14sp"
@@ -166,6 +166,7 @@
                         android:visibility="visible"
                         android:enabled="false"
                         android:alpha="0.5"
+                        android:layout_marginBottom="@dimen/margin_15"
                         app:layout_constraintEnd_toEndOf="@+id/et_sms_valid_code"
                         app:layout_constraintTop_toTopOf="@+id/et_sms_valid_code"
                         app:layout_constraintBottom_toBottomOf="@+id/et_sms_valid_code" />
@@ -197,7 +198,7 @@
                     app:primaryColor="@color/color_AFAFB1">
 
                     <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
-                        android:id="@+id/eet_login_password"
+                        android:id="@+id/eet_login_password_forget"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="actionNext"
@@ -211,7 +212,7 @@
                 </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
 
                 <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
-                    android:id="@+id/et_confirm_password"
+                    android:id="@+id/et_confirm_password_forget"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
