--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -172,7 +172,13 @@
                         app:layout_constraintBottom_toBottomOf="@+id/et_sms_valid_code" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
+            <TextView
+                android:id="@+id/tv_sms_send"
+                android:layout_marginTop="@dimen/margin_10"
+                app:layout_constraintTop_toBottomOf="@+id/block_sms_valid_code"
+                android:text="@string/end_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -191,7 +197,7 @@
                     app:endIcon="@drawable/ic_eye_close"
                     app:hintText="@string/hint_register_password"
                     app:isResponsiveIconColor="false"
-                    app:labelText="@string/login_password"
+                    app:labelText="@string/new_login_password"
                     app:labelTextStyle="normal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
