--- a/app/src/main/res/layout/activity_detail_sport.xml
+++ b/app/src/main/res/layout/activity_detail_sport.xml
@@ -10,21 +10,18 @@
     android:layout_width="match_parent"
     android:layout_height="0dp"
     app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toTopOf="@+id/cl_bet_list_bar"
-    android:fitsSystemWindows="false">
+    app:layout_constraintBottom_toTopOf="@+id/cl_bet_list_bar">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="false"
         android:background="@color/color_000000">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="false"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
@@ -55,7 +52,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/collaps_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/tool_bar_height"
                 app:contentInsetStart="0dp"
                 app:contentScrim="@color/transparent"
                 app:layout_collapseMode="pin"
