--- a/app/src/main/res/layout/view_detail_head_toolbar.xml
+++ b/app/src/main/res/layout/view_detail_head_toolbar.xml
@@ -27,8 +27,6 @@
         app:layout_constraintDimensionRatio="3:2"
         android:orientation="vertical">
 
-        <include layout="@layout/view_status_bar" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/tool_bar_height"
@@ -132,7 +130,8 @@
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:text="@string/time_null"
-                        android:fontFamily="@font/din_bold"
+                        android:fontFamily="@font/din_regular"
+                        android:textFontWeight="700"
                         android:textColor="@color/color_99FFFFFF"
                         android:textSize="@dimen/textSize14sp" />
 
