--- a/app/src/main/res/layout/view_toolbar_detail_collaps.xml
+++ b/app/src/main/res/layout/view_toolbar_detail_collaps.xml
@@ -2,12 +2,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/tool_bar_height">
 
     <ImageView
         android:id="@+id/iv_toolbar_bg"
         android:layout_width="match_parent"
-        android:layout_height="79dp"
+        android:layout_height="match_parent"
         android:scaleType="fitXY"
         android:visibility="visible"
         android:src="@drawable/bg_sport_detail_football" />
@@ -16,11 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <View
-            android:id="@+id/v_statusbar_1"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_25" />
 
         <LinearLayout
             android:layout_width="match_parent"
