--- a/app/src/main/res/layout/view_detail_head_toolbar.xml
+++ b/app/src/main/res/layout/view_detail_head_toolbar.xml
@@ -14,8 +14,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/bg_sport_detail_football" />
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        android:src="@drawable/img_soccer_mobile01" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -68,6 +69,11 @@
                 android:src="@drawable/ic_sport_refresh"
                 android:layout_marginLeft="10dp" />
         </LinearLayout>
+
+        <androidx.legacy.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
         <LinearLayout
             android:layout_width="match_parent"
