密码修改逻辑以及接口调试

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -142,7 +142,7 @@
                         app:primaryColor="@color/color_AFAFB1">
 
                         <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
-                            android:id="@+id/eet_sms_valid_code"
+                            android:id="@+id/eet_sms_code"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:imeOptions="actionNext"
@@ -176,13 +176,23 @@
                 android:id="@+id/tv_sms_send"
                 android:layout_marginTop="@dimen/margin_10"
                 app:layout_constraintTop_toBottomOf="@+id/block_sms_valid_code"
-                android:text="@string/end_date"
-                android:layout_width="match_parent"
+                android:text="@string/has_send_message_to_phone"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/tv_sms_send2"
+                    android:textColor="@color/color_025BE8"
+                    android:layout_marginTop="@dimen/margin_10"
+                    app:layout_constraintStart_toEndOf="@+id/tv_sms_send"
+                    app:layout_constraintTop_toBottomOf="@+id/block_sms_valid_code"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="+63 ******3729"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
-
+                android:visibility="gone"
                 android:id="@+id/cl_password"
                 android:padding="@dimen/margin_20"
                 app:layout_constraintTop_toBottomOf="@+id/first_pager"
@@ -246,6 +256,45 @@
 
                 </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
             </androidx.constraintlayout.widget.ConstraintLayout>
+             <androidx.constraintlayout.widget.ConstraintLayout
+                android:visibility="gone"
+                android:id="@+id/cl_success"
+                android:padding="@dimen/margin_20"
+                app:layout_constraintTop_toBottomOf="@+id/cl_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tv_user_name"
+                   android:layout_marginTop="@dimen/margin_20"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/margin_18"
+                    android:gravity="center"
+                    android:textFontWeight="500"
+                    android:textStyle="bold"
+                    android:textColor="@color/color_D2E4FF_414655"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="会员:duck"
+                    tools:ignore="UnusedAttribute" />
+                 <TextView
+                     android:id="@+id/tv_tips_success"
+                     android:text="@string/tips_password_success"
+                     android:layout_marginTop="@dimen/margin_14"
+                     android:textSize="@dimen/textSize14sp"
+                     android:gravity="center"
+                     android:textColor="@color/color_6C7BA8_A7B2C4"
+                     app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"/>
+                 <ImageView
+                     android:src="@drawable/ic_icon_success"
+                     android:layout_marginTop="@dimen/margin_24"
+                     app:layout_constraintTop_toBottomOf="@+id/tv_tips_success"
+                     android:layout_width="match_parent"
+                     android:layout_height="50dp"/>
+             </androidx.constraintlayout.widget.ConstraintLayout>
             <Button
                 android:id="@+id/btn_put"
                 style="?android:attr/borderlessButtonStyle"
@@ -260,7 +309,7 @@
                 android:textSize="@dimen/textSize17sp"
                 android:alpha="0.5"
                 android:enabled="false"
-                app:layout_constraintTop_toBottomOf="@+id/cl_password"
+                app:layout_constraintTop_toBottomOf="@+id/cl_success"
                 app:layout_constraintBottom_toBottomOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
