--- a/app/src/main/res/layout/text_field_boxes_layout.xml
+++ b/app/src/main/res/layout/text_field_boxes_layout.xml
@@ -75,6 +75,8 @@
                         android:layout_alignParentBottom="true"
                         android:layout_centerVertical="true"
                         android:layout_marginBottom="6dp"
+                        android:singleLine="true"
+                        android:ellipsize="end"
                         android:layout_toEndOf="@id/text_field_boxes_sub_label"
                         android:gravity="center"
                         android:textColor="@color/color_939393_cccccc"
