--- a/app/src/main/res/layout/text_form_field_boxes_layout.xml
+++ b/app/src/main/res/layout/text_form_field_boxes_layout.xml
@@ -81,6 +81,8 @@
                         android:layout_centerVertical="true"
                         android:layout_marginBottom="6dp"
                         android:layout_toEndOf="@id/view_sub"
+                        android:singleLine="true"
+                        android:ellipsize="end"
                         android:gravity="center"
                         android:textColor="@color/color_C9CFD7"
                         android:textSize="@dimen/textSize12sp"
